# tech-challenge-fase1

./: .env.example  .gitignore  Dockerfile  README.md  _build_pdf.py  _run_exps.py  main.py  pyproject.toml  run_fase2_experiments.py
models/: seer_KNN.pkl  seer_Regressão_Logística.pkl  seer_XGBoost.pkl  seer_scaler.pkl  seer_Árvore_de_Decisão.pkl  wisconsin_KNN.pkl  wisconsin_Random_Forest.pkl  wisconsin_Regressão_Logística.pkl  wisconsin_XGBoost.pkl  wisconsin_scaler.pkl  wisconsin_Árvore_de_Decisão.pkl
notebooks/: 01_eda.ipynb  02_genetic_opt.py  03_llm_interpret.py
notebooks/breast-cancer-SEER/: 01_breast-cancer-SEER.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
notebooks/breast-cancer-wisconsin/: 01_breast-cancer-wisconsin-data.ipynb  02_preprocessing.ipynb  03_modeling.ipynb
reports/: AI_Prediction_SEER.xlsx  seer_comparacao_modelos.csv  wisconsin_comparacao_modelos.csv
results/: AI_Prediction_Wisconsin.xlsx  comparacao_modelos.csv
src/: __init__.py  config.py  data_load_breast_SEER.py  data_loader.py  data_loader_breast_wisconsin.py  evaluation.py  models.py  monitoring.py  pipeline.py  preprocessing.py
src/genetic/: encoding.py  experiments.py  fitness.py  operators.py  optimizer.py  visualization.py
src/llm/: __init__.py  interpreter.py  prompts.py
tests/: test_experiments.py  test_fitness.py  test_genetic_operators.py  test_llm.py  test_monitoring.py  test_optimizer.py
