[tool.poetry]
name = "tech-challenge-fase1"
version = "1.0.0"
description = "Sistema Inteligente de Suporte ao Diagnóstico - Saúde e Segurança da Mulher | FIAP POS TECH - IADT"
authors = [
    "Vinicius <tecnologia@meucontadoronline.com.br>",
    "Natalia Cabrera",
    "Rodrigo",
    "Paula",
    "Thamy",
]
readme = "README.md"
license = "MIT"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# Data manipulation
pandas = "^2.0.0"
numpy = "^1.24.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.15.0"

# Machine Learning
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"

# Explainability
shap = "^0.42.0"

# Utilities
openpyxl = "^3.1.0"
joblib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipykernel = "^6.25.0"
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
